--- a/content/pages/rules/authorization/033/index.adoc
+++ b/content/pages/rules/authorization/033/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/033/
 :category: authorization
 :description: This requirement establishes the importance of limiting administrative access to apps to authorized users only in order to avoid several common attacks.
-:keywords: Restrict, Administrative, Access Control, Network, CWE, ASVS, Rules, Ethical Hacking, Pentesting
+:keywords: Restrict, Administrative, Access Control, Network, CWE, ASVS, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R033. Restrict administrative access
@@ -79,3 +79,8 @@ modify other users’ data, change access rights, etc.
 V13.1 Generic Web Service Security Verification Requirements.(13.1.2)]
 Verify that access to administration and management functions is limited to
 authorized administrators.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.2.1]
+Restrict inbound and outbound traffic to that which is necessary for the
+cardholder data environment,
+and specifically deny all other traffic.
