--- a/content/pages/rules/credentials/142/index.adoc
+++ b/content/pages/rules/credentials/142/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/142/
 :category: credentials
 :description: This requirement establishes the importance of modifying all default credentials in the system in order to avoid brute force attacks.
-:keywords: Change, Credentials, Default, Password, System, ASVS, Rules, Ethical Hacking, Pentesting
+:keywords: Change, Credentials, Default, Password, System, ASVS, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R142. Change system default credentials
@@ -90,4 +90,9 @@ removed,
 such as sample applications, platform documentation, and default or example
 users.
 
-. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 2.2.d]
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 2.2.1]
+For wireless environments connected to the cardholder data environment or
+transmitting cardholder data,
+change ALL wireless vendor defaults at installation,
+including but not limited to default wireless encryption keys, passwords,
+and *SNMP* community strings.
