feat(doc): #2994.272 add pci refs to some rules
- Added PCI DSS references to R062, R176, R259 and R033
- Updated R062 and R176 keywords


Former-commit-id: a95dc591ddc2517f5f2dc561337114a12df77e56

--- a/content/pages/rules/authorization/033/index.adoc
+++ b/content/pages/rules/authorization/033/index.adoc
@@ -84,3 +84,6 @@ authorized administrators.
 Restrict inbound and outbound traffic to that which is necessary for the
 cardholder data environment,
 and specifically deny all other traffic.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.2.2]
+Secure and synchronize router configuration files.
