--- a/content/pages/rules/architecture/062/index.adoc
+++ b/content/pages/rules/architecture/062/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/062/
 :category: architecture
 :description: This requirement establishes the importance of using standard industry-approved configurations.
-:keywords: Configuration, Vulnerability, Standard, Industry, ASVS, GDPR
+:keywords: Configuration, Vulnerability, Standard, Industry, ASVS, GDPR, PCI DSS
 :rules: yes
 
 = R062. Define standard configurations
@@ -140,3 +140,6 @@ or string operations are found.
 V14.1 Build.(14.1.3)]
 Verify that server configuration is hardened as per the recommendations of the
 application server and frameworks in use.
+
+. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.2.2]
+Secure and synchronize router configuration files.
