--- a/content/pages/rules/data/176/index.adoc
+++ b/content/pages/rules/data/176/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/176/
 :category: data
 :description: This requirement establishes the importance of restricting access to sensitive information to authorized users only.
-:keywords: Data, Authorization, Restriction, GDPR, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Data, Authorization, Restriction, GDPR, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R176. Restrict system objects
@@ -126,3 +126,6 @@ Verify that enabled **RESTful HTTP** methods are a valid choice for the user or
 action,
 such as preventing normal users using *DELETE* or *PUT* on protected *API* or
 resources.
+
+. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.2.2]
+Secure and synchronize router configuration files.
