--- a/content/pages/rules/networks/259/index.adoc
+++ b/content/pages/rules/networks/259/index.adoc
@@ -35,3 +35,17 @@ reverse proxies, cloud-based security groups, or similar mechanisms.
 Restrict inbound and outbound traffic to that which is necessary for the
 cardholder data environment,
 and specifically deny all other traffic.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.2.3]
+Install perimeter firewalls between all wireless networks and the cardholder
+data environment.
+Configure these firewalls to deny or,
+if traffic is necessary for business purposes,
+permit only authorized traffic.
+
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.1]
+Implement a *DMZ* to limit inbound traffic to only system components that
+provide authorized publicly accessible services, protocols, and ports.
+
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.2]
+Limit inbound Internet traffic to *IP* addresses within the *DMZ*.
