skims\feat(back): #2294.126 js errors without trace
Former-commit-id: 12c3a136cb38792d4f73662bed59ac5612ff6e51

--- a/skims/static/translations/findings/f061.yaml
+++ b/skims/static/translations/findings/f061.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f061.javascript_swallows_exceptions.description:
+  en: Empty Javascript catch in {path}
+  es: Catch de Javascript vacío en {path}
 utils.model.finding.enum.f061.description:
   en: >
     Application errors are handled neither by throwing an exception nor by
