--- a/skims/static/translations/findings/f061.yaml
+++ b/skims/static/translations/findings/f061.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f061.java_swallows_exceptions.description:
+  en: Empty Java catch in {path}
+  es: Catch de Java vacío en {path}
 src.lib_path.f061.javascript_swallows_exceptions.description:
   en: Empty Javascript catch in {path}
   es: Catch de Javascript vacío en {path}
