--- a/content/pages/rules/architecture/062/index.adoc
+++ b/content/pages/rules/architecture/062/index.adoc
@@ -143,3 +143,7 @@ application server and frameworks in use.
 
 . [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.2.2]
 Secure and synchronize router configuration files.
+
+. [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.4]
+Implement anti-spoofing measures to detect and block forged source IP addresses
+from entering the network.
