--- a/content/pages/rules/networks/255/index.adoc
+++ b/content/pages/rules/networks/255/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/255/
 :category: networks
 :description: This requirement establishes the importance of allowing access only to the necessary ports to avoid security breaches.
-:keywords: Requirement, Security, Ports, Access, Restricted, Servers, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Ports, Access, Restricted, Servers, HIPAA, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R255. Allow access only to the necessary ports
@@ -22,3 +22,10 @@ Transmission Security: Implement technical security measures
 to guard against unauthorized access
 to electronic protected health information
 that is being transmitted over an electronic communications network.
+
+. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.1]
+Implement a *DMZ* to limit inbound traffic to only system components that
+provide authorized publicly accessible services, protocols, and ports.
+
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.2]
+Limit inbound Internet traffic to *IP* addresses within the *DMZ*.
