--- a/content/pages/rules/networks/259/index.adoc
+++ b/content/pages/rules/networks/259/index.adoc
@@ -49,3 +49,11 @@ provide authorized publicly accessible services, protocols, and ports.
 
 . [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.2]
 Limit inbound Internet traffic to *IP* addresses within the *DMZ*.
+
+. [[r8]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.3]
+Implement anti-spoofing measures to detect and block forged source IP addresses
+from entering the network.
+
+. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.4]
+Do not allow unauthorized outbound traffic from the cardholder data environment
+to the Internet.
