--- a/content/pages/rules/source/173/index.adoc
+++ b/content/pages/rules/source/173/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/173/
 :category: source
 :description: This requirement establishes the importance of validating the application inputs and discarding harmful information to avoid frequent injection attacks.
-:keywords: Inputs, Application, Validation, Discard, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Inputs, Application, Validation, Discard, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R173. Discard unsafe inputs
@@ -385,3 +385,7 @@ Verify that *XSD* schema validation takes place to ensure a properly formed
 *XML* document,
 followed by validation of each input field before any processing of that data
 takes place.
+
+. [[r46]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.3]
+Implement anti-spoofing measures to detect and block forged source IP addresses
+from entering the network.
