refac(doc): #2994.274 update pci refs link
- Updated the link in PCI DSS references so that it points to
a document in English


Former-commit-id: 7bb5ace344548e37f4f2f615b2a25cf343ca6b67

--- a/content/pages/rules/architecture/062/index.adoc
+++ b/content/pages/rules/architecture/062/index.adoc
@@ -141,9 +141,9 @@ V14.1 Build.(14.1.3)]
 Verify that server configuration is hardened as per the recommendations of the
 application server and frameworks in use.
 
-. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.2.2]
+. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.2.2]
 Secure and synchronize router configuration files.
 
-. [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.4]
+. [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.4]
 Implement anti-spoofing measures to detect and block forged source IP addresses
 from entering the network.
