--- a/content/pages/rules/networks/255/index.adoc
+++ b/content/pages/rules/networks/255/index.adoc
@@ -23,9 +23,9 @@ to guard against unauthorized access
 to electronic protected health information
 that is being transmitted over an electronic communications network.
 
-. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.1]
+. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.1]
 Implement a *DMZ* to limit inbound traffic to only system components that
 provide authorized publicly accessible services, protocols, and ports.
 
-. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 1.3.2]
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.2]
 Limit inbound Internet traffic to *IP* addresses within the *DMZ*.
