feat(doc): #2994.275 add pci refs to some rules
- Added PCI DSS references to R062, R033, R259, R077, R261 and R255
- Updated R077 and R261 keywords


Former-commit-id: 3e592032af23a09ba61c68ac232ddd1d57d9c652

--- a/content/pages/rules/architecture/062/index.adoc
+++ b/content/pages/rules/architecture/062/index.adoc
@@ -147,3 +147,6 @@ Secure and synchronize router configuration files.
 . [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.4]
 Implement anti-spoofing measures to detect and block forged source IP addresses
 from entering the network.
+
+. [[r20]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.5]
+Permit only "established" connections into the network.
