--- a/content/pages/rules/authorization/033/index.adoc
+++ b/content/pages/rules/authorization/033/index.adoc
@@ -87,3 +87,8 @@ and specifically deny all other traffic.
 
 . [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.2.2]
 Secure and synchronize router configuration files.
+
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.6]
+Place system components that store cardholder data (such as a database) in an
+internal network zone,
+segregated from the *DMZ* and other untrusted networks.
