--- a/content/pages/rules/networks/259/index.adoc
+++ b/content/pages/rules/networks/259/index.adoc
@@ -57,3 +57,8 @@ from entering the network.
 . [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.4]
 Do not allow unauthorized outbound traffic from the cardholder data environment
 to the Internet.
+
+. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.6]
+Place system components that store cardholder data (such as a database) in an
+internal network zone,
+segregated from the *DMZ* and other untrusted networks.
