skims\feat(back): #2294.140 generic exceptions py
Former-commit-id: 8996334a7940e091c68089db3ead32a00c8b3020

--- a/skims/static/translations/findings/f060.yaml
+++ b/skims/static/translations/findings/f060.yaml
@@ -1,3 +1,6 @@
+src.lib_path.f060.generic_exceptions.description:
+  en: Generic {lang} exception in {path}
+  es: Excepción genérica de {lang} en {path}
 utils.model.finding.enum.f060.description:
   en: >
     The source code uses generic exceptions to handle unexpected errors.
