feat(doc): #2994.276 add refs to some rules
- Added PCI DSS references to R251, R255, R266 and R062
- Added ASVS references to R251
- Updated R251 and R266 keywords
- Adjusted F079 and R302 for clarity
- Adjusted F079 SEO description for length compliance
- Removed R256 because it was redundant with R255
- Fixed some minor typos


Former-commit-id: f6fc072cbe4d8e4baae354a655a956acd487eb7e

--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/266/
 :category: architecture
 :description: This requirement establishes the importance of disabling or controlling system functions that could be harmful to the application.
-:keywords: Insecure, Functionality, System, Hardening, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Insecure, Functionality, System, Hardening, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R266. Disable insecure functionalities
@@ -130,3 +130,7 @@ users.
 V14.5 Validate HTTP Request Header Requirements.(14.5.1)]
 Verify that the application server only accepts the *HTTP* methods in use by
 the application or *API*, including pre-flight *OPTIONS*.
+
+. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.2]
+Enable only necessary services, protocols, daemons, etc.,
+as required for the function of the system.
