--- a/content/pages/findings/hygiene/079/index.adoc
+++ b/content/pages/findings/hygiene/079/index.adoc
@@ -1,5 +1,5 @@
 :slug: findings/079/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities arising from including dependencies directly in repositories, recommendations to avoid them and related security requirements.
+:description: This finding presents information about vulnerabilities arising from directly including dependencies in repositories.
 :keywords: Non-upgradable, Upgrade, Update, Dependency, Library, Repository
 :findings: yes
 :type: hygiene
@@ -9,7 +9,7 @@
 == Description
 
 The application's dependencies are not explicitly declared in the source code
-(name and version).
+(name and specific version).
 They are directly included in the source code repositories.
 
 == Rules
