--- a/content/pages/rules/architecture/062/index.adoc
+++ b/content/pages/rules/architecture/062/index.adoc
@@ -150,3 +150,7 @@ from entering the network.
 
 . [[r20]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.5]
 Permit only "established" connections into the network.
+
+. [[r21]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.2]
+Implement additional security features for any required services, protocols,
+or daemons that are considered to be insecure.
