--- a/content/pages/rules/networks/255/index.adoc
+++ b/content/pages/rules/networks/255/index.adoc
@@ -32,3 +32,7 @@ Limit inbound Internet traffic to *IP* addresses within the *DMZ*.
 
 . [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.5]
 Permit only "established" connections into the network.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.2]
+Enable only necessary services, protocols, daemons, etc.,
+as required for the function of the system.
