--- a/skims/static/translations/findings/f060.yaml
+++ b/skims/static/translations/findings/f060.yaml
@@ -1,6 +1,6 @@
-src.lib_path.f060.generic_exceptions.description:
-  en: Generic {lang} exception in {path}
-  es: Excepción genérica de {lang} en {path}
+src.lib_path.f060.insecure_exceptions.description:
+  en: Insecure {lang} exception in {path}
+  es: Excepción insegura de {lang} en {path}
 utils.model.finding.enum.f060.description:
   en: >
     The source code uses generic exceptions to handle unexpected errors.
