feat(doc): #2994.277 add pci refs to some rules
- Added PCI DSS references to R062, R266, R336, R181, R224 and R185
- Updated R336, R147, R181, R224 and R185 keywords
- Merged F016 and F009
- Adjusted F009 SEO description for length compliance
- Adjusted the corresponding fin and rule references
- Fixed some typos


Former-commit-id: a3212c854c75a14638d84fb0b2fda70ca91b2821

--- a/content/pages/rules/architecture/266/index.adoc
+++ b/content/pages/rules/architecture/266/index.adoc
@@ -134,3 +134,7 @@ the application or *API*, including pre-flight *OPTIONS*.
 . [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.2]
 Enable only necessary services, protocols, daemons, etc.,
 as required for the function of the system.
+
+. [[r16]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.5]
+Remove all unnecessary functionality, such as scripts, drivers, features,
+subsystems, file systems, and unnecessary web servers.
