--- a/content/pages/findings/security/009/index.adoc
+++ b/content/pages/findings/security/009/index.adoc
@@ -1,16 +1,18 @@
 :slug: findings/009/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about sensitive information in source code vulnerabilities, recommendations to avoid them and related security requirements.
+:description: This finding presents information about vulnerabilities arising from storing sensitive information in the source code.
 :keywords: Sensitive, Information, Source Code, Repository, Username, Password
 :findings: yes
 :type: security
 
-= F009. Sensitive information in source code
+= F009. Source code with sensitive information
 
 == Description
 
 The source code repository contains sensitive information such as usernames,
-passwords, email addresses and IP addresses, among others.
+passwords, encryption keys, email addresses and IP addresses.
 
 == Rules
 
-. [[r1]] [inner]#link:/web/rules/156/[R156. Source code without sensitive information]#
+. [[r1]] [inner]#link:/web/rules/145/[R145. Protect system cryptographic keys]#
+
+. [[r2]] [inner]#link:/web/rules/156/[R156. Source code without sensitive information]#
