--- a/content/pages/rules/cryptography/145/index.adoc
+++ b/content/pages/rules/cryptography/145/index.adoc
@@ -23,7 +23,7 @@ standards.
 
 == Findings
 
-* [inner]#link:/web/findings/016/[F016. Non-parameterized cryptographic key]#
+* [inner]#link:/web/findings/009/[F009. Sensitive information in source code]#
 
 == References
 
