--- a/content/pages/rules/cryptography/224/index.adoc
+++ b/content/pages/rules/cryptography/224/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/224/
 :category: cryptography
 :description: This requirement establishes the importance of using secure cryptographic mechanisms to generate the random numbers used in data encryption.
-:keywords: Cryptographic, Mechanism, Random Number, CWE, NIST, ASVS, Rules, Ethical Hacking, Pentesting
+:keywords: Cryptographic, Mechanism, Random Number, CWE, NIST, ASVS, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R224. Use secure cryptographic mechanisms
@@ -157,3 +157,6 @@ V9.1 Communications Security Requirements.(9.1.2)]
 Verify using online or up to date *TLS* testing tools that only strong
 algorithms, ciphers, and protocols are enabled,
 with the strongest algorithms and ciphers set as preferred.
+
+. [[r25]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.3]
+Encrypt all non-console administrative access using strong cryptography.
