--- a/content/pages/rules/cryptography/145/index.adoc
+++ b/content/pages/rules/cryptography/145/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/145/
 :category: cryptography
 :description: This requirement establishes the importance of protecting system cryptographic keys.
-:keywords: Asymmetric, Symmetric, Cryptography, Keys, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Asymmetric, Symmetric, Cryptography, Keys, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R145. Protect system cryptographic keys
@@ -104,3 +104,6 @@ securely create, store, control access to and destroy secrets.
 V6.4 Secret Management.(6.4.2)]
 Verify that key material is not exposed to the application but instead uses an
 isolated security module like a vault for cryptographic operations.
+
+. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.4.1]
+Decryption keys must not be associated with user accounts.
