--- a/content/pages/rules/system/186/index.adoc
+++ b/content/pages/rules/system/186/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/186/
 :category: system
 :description: This requirement establishes the importance of applying the principle of least privilege when accessing systems and assigning permissions.
-:keywords: Principle, Least, Privilege, NIST, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Principle, Least, Privilege, NIST, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R186. Use the principle of least privilege
@@ -102,3 +102,11 @@ microphones, or location.
 V14.2 Dependency.(14.2.6)]
 Verify that the attack surface is reduced by sandboxing or encapsulating third
 party libraries to expose only the required behavior into the application.
+
+. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.4.1]
+If disk encryption is used
+(rather than file- or column-level database encryption),
+logical access must be managed separately and independently of native operating
+system authentication and access control mechanisms
+(for example, by not using local user account databases or general network
+login credentials).
