feat(doc): #2994.280 add pci refs to some rules
- Added PCI DSS references to R145 and R186
- Created F120 for dependency pinning
- Added the corresponding fin and rule references


Former-commit-id: 53d7a0c4da13e129e10563cb3df166dbd6ee1352

--- a/content/pages/rules/cryptography/145/index.adoc
+++ b/content/pages/rules/cryptography/145/index.adoc
@@ -107,3 +107,7 @@ isolated security module like a vault for cryptographic operations.
 
 . [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.4.1]
 Decryption keys must not be associated with user accounts.
+
+. [[r16]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.5.2]
+Restrict access to cryptographic keys to the fewest number of custodians
+necessary.
