--- a/content/pages/rules/credentials/333/index.adoc
+++ b/content/pages/rules/credentials/333/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/333/
 :category: credentials
 :description: This requirement establishes the importance of storing the salt values used in the hashing process separately from hashed passwords.
-:keywords: Salt, Store, Separately, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Salt, Store, Separately, ASVS, CWE, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R333. Store salt values separately
@@ -40,3 +40,9 @@ The secret salt value SHALL be stored separately from the hashed passwords
 V6.4 Secret Management.(6.4.2)]
 Verify that key material is not exposed to the application but instead uses an
 isolated security module like a vault for cryptographic operations.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.5.3]
+Store secret and private keys used to encrypt/decrypt cardholder data encrypted
+with a key-encrypting key that is at least as strong as the data-encrypting
+key,
+and that is stored separately from the data-encrypting key.
