--- a/content/pages/rules/cryptography/145/index.adoc
+++ b/content/pages/rules/cryptography/145/index.adoc
@@ -111,3 +111,19 @@ Decryption keys must not be associated with user accounts.
 . [[r16]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.5.2]
 Restrict access to cryptographic keys to the fewest number of custodians
 necessary.
+
+. [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.5.3]
+Store secret and private keys used to encrypt/decrypt cardholder data within a
+secure cryptographic device (such as a hardware (host) security module (*HSM*)
+or **PTS**-approved point-of-interaction device).
+
+. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.5.4]
+Store cryptographic keys in the fewest possible locations.
+
+. [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.6.2]
+Fully document and implement all key-management processes and procedures for
+cryptographic keys including secure cryptographic key distribution.
+
+. [[r20]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.6.3]
+Fully document and implement all key-management processes and procedures for
+cryptographic keys including secure cryptographic key storage.
