--- a/content/pages/rules/cryptography/338/index.adoc
+++ b/content/pages/rules/cryptography/338/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/338/
 :category: cryptography
 :description: This requirement establishes the importance of implementing perfect forward secrecy for communications with critical sensitive information.
-:keywords: Perfect, Forward, Secrecy, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Perfect, Forward, Secrecy, ASVS, CWE, NIST, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R338. Implement perfect forward secrecy
@@ -55,3 +55,8 @@ V9.1 Communications Security Requirements.(9.1.2)]
 Verify using online or up to date *TLS* testing tools that only strong
 algorithms, ciphers, and protocols are enabled,
 with the strongest algorithms and ciphers set as preferred.
+
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.6.4]
+Fully document and implement all key-management processes and procedures for
+cryptographic keys including cryptographic key changes for keys that have
+reached the end of their cryptoperiod.
