--- a/skims/static/translations/findings/f009.yaml
+++ b/skims/static/translations/findings/f009.yaml
@@ -4,6 +4,9 @@ src.lib_path.f009.aws_credentials.description:
 src.lib_path.f009.crypto_js_credentials.description:
   en: CryptoJS plaintext data source in {path}
   es: Fuente de datos en texto plano para CryptoJS en {path}
+src.lib_path.f009.dockerfile_env_secrets.description:
+  en: Dockerfile credentials in {path}
+  es: Credenciales de Docker en {path}
 utils.model.finding.enum.f009.description:
   en: >
     The source code repository contains sensitive information such as
