feat(doc): #2994.282 created rule 361
- Created R361 for crypto keys replacement
- Added a Description
- Added CWE, ASVS and PCI DSS references
- Adjusted R146 title for clarity


Former-commit-id: 96c54f4631959c6fd2b951cc1cdcf14a125f42ad

--- a/content/pages/rules/cryptography/146/index.adoc
+++ b/content/pages/rules/cryptography/146/index.adoc
@@ -4,7 +4,7 @@
 :keywords: Timeout, Cryptographic, Keys, ASVS, CWE, RAM, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R146. Set timeout to cryptographic keys
+= R146. Remove cryptographic keys from RAM
 
 == Requirement
 
