--- a/content/pages/asserts/index.adoc
+++ b/content/pages/asserts/index.adoc
@@ -2,6 +2,7 @@
 :description: Fluid Attacks presents Asserts, an open-source tool that looks for deterministic and peripheral vulnerabilities verifying their status by automated attacks.
 :keywords: Fluid Attacks, Resources, Asserts, Security, Vulnerabilities, Automated Attacks, Pentesting, Ethical Hacking
 :assertsindex: yes
+:banner: asserts-bg
 
 = Asserts
 
